<resources>
    <string name="app_name">DiscoverYourChef</string>
    <string name="setCerealClickName">Cereals</string>
    <string name="setBreadClickName">Breads</string>
    <string name="setStarterClickName">Starter Food</string>
    <string name="setSideClickName">Side Dishes</string>
    <string name="setSoupsClickName">Soups</string>
    <string name="setMainCourseClickName">Main Course</string>
    <string name="setPancakesClickName">Pancakes</string>
    <string name="setSweetsClickName">Sweets</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string-array name="spinnerdiet">
        <item></item>
        <item>balanced</item>
        <item>high-fiber</item>
        <item>high-protein</item>
        <item>low-carb</item>
        <item>low-fat</item>
        <item>low-sodium</item>
    </string-array>

    <string-array name="spinnermeal">
        <item></item>
        <item>Breakfast</item>
        <item>Dinner</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Teatime</item>
    </string-array>

    <string-array name="spinnerdish">
        <item></item>
        <item>Biscuit and cookies</item>
        <item>Bread</item>
        <item>Cereals</item>
        <item>Condiments and sauces</item>
        <item>Desserts</item>
        <item>Drinks</item>
        <item>Main Course</item>
        <item>Pancakes</item>
        <item>Salad</item>
        <item>Soup</item>
        <item>Starter</item>
        <item>Sweets</item>

    </string-array>
    <string name="navdrawprofile">Profile</string>
    <string name="navdrawfavorites">Favorites</string>
    <string name="favoritesString">Favorites</string>
    <string name="ProfileManString">Profile Manager</string>
    <string name="updateString">Update password</string>
    <string name="full_nameString">Full Name</string>
    <string name="passwordString">Password</string>
    <string name="e_mail_string">E-mail</string>
    <string name="backbuttonDescription">BACKBUTTON</string>
    <string name="DeleteUserString">Delete Account</string>
    <string name="typenewpass">Type new password</string>
    <string name="change_passwordString">Change password?</string>
    <string name="send_feedbackString">Send Feedback</string>
    <string name="send_emailString">Send Email</string>
    <string name="messageToUserString">Send us Email with feedback for the application or other suggestions you may have</string>
    <string name="emailsubject">Subject</string>
    <string name="message_bodyString">Message body</string>
    <string name="send_feedback_itemString">Send feedback</string>
    <string name="contactowner">disc_your_chef@hotmail.com</string>
    <string name="noappforemailsString">No application for sending Ε-Mails found</string>
</resources>