<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UpdateProfile">

    <ImageView
        android:id="@+id/edprof_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/backbuttonDescription"
        android:focusable="true"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_round_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/update_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ProfileManString"
        android:textColor="@color/textcolorblack"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/edprof_backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/profMan_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_account_nav"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_profile_title"
        app:tint="@color/black" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/DeleteUserString"
        android:textAllCaps="false"
        android:textColor="@color/redalert"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profMan_logo" />

    <TextView
        android:id="@+id/youremaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Email"
        android:textColor="@color/textcolorblack"
        android:textSize="18sp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="18sp"></TextView>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/login_bg"
        android:hint="@string/e_mail_string"
        android:paddingStart="16dp"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/register_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_button" />

    <TextView
        android:id="@+id/yourfullnamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Fullname"
        android:textColor="@color/textcolorblack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/register_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="18sp"
        android:layout_marginBottom="2dp"></TextView>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/login_bg"
        android:hint="@string/full_nameString"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <TextView
        android:id="@+id/changepasswordlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_passwordString"
        android:textColor="@color/textcolorblack"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="2dp"></TextView>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/login_bg"
        android:hint="@string/typenewpass"
        android:inputType="textPassword"
        android:textColor="@color/textcolorblack"
        android:paddingStart="16dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/updateString"
        android:textAllCaps="false"
        android:textColor="#FF979797"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>