<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SendEmail">

    <ImageView
        android:id="@+id/sendmail_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/backbuttonDescription"
        android:focusable="true"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_round_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/send_mail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/send_feedbackString"
        android:textColor="@color/textcolorblack"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sendmail_backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/message_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_email_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_mail_title"
        android:layout_marginTop="20dp"
        app:tint="@color/black" />


    <TextView
        android:id="@+id/message_to_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:text="@string/messageToUserString"
        android:textColor="@color/textcolorblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_logo"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"/>

    <EditText
        android:id="@+id/EtSubject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/emailsubject"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/textcolorblack"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintTop_toBottomOf="@+id/message_to_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/EtBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message_bodyString"
        android:inputType="textMultiLine"
        android:textColor="@color/textcolorblack"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtSubject"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/send_emailString"
        android:textAllCaps="false"
        android:textColor="#FF979797"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


